--- a/accessory/index.html
+++ b/accessory/index.html
@@ -30,7 +30,7 @@
     </script>
 </head>
 <body>
-    <h1>VAT Calculator</h1>
+    <h1>Car accessories</h1>
     <label for="accessories">Choose an accessory:</label> 
         <select id="accessories"> 
             <!-- Accessories and their prices --> 
